2007-03-07 Maximilien Cuony
	* Compatibility with FF 1.5
	* Full support of Windows (with 3 hors of work !)

2007-03-06 Maximilien Cuony
	* Implement a test for detect presence of GPG
	* selectPublicKey implemented in cgpg
	* Import system implemented
	* Add a detection of blanks selections
	* Add a system for detection of valid PGP'blocks
	* Compatibility with Iframes !!!
	* Compatibility with gmail !!!
	* Support for scripts and stranges <br>[\n] in source code of selections !

2007-03-06  Achraf cherti
	* list dialog (list.xul, list.js, list*dtd) implemented.
	* selectPublicKey() implemented (it show a dialog with all keys).
	* two optional arguments are added to showText() : description
	  and title.
	* the default values of gpg_path, specify_gpg_path and show_website are
	  added in defaults/preferences/firegpg.js.

2007-03-05  Maximilien Cuony
	* Fix an error in getPrivateKeyPassword()
	* Cgpg class in now finish !
	* Implementation of getSelfKey(), for get the default key !
	* Full implementation for saving the password, with a menu for erase it.
	* Come back to default UUID
	* Fixed problems with complied package !
	* Version 0.1 Packed, and uploaded to the server !
	* Fixed a bug in select system who didn't look at \n in some texts
	* Add support for select text with HTML and <br> balises

2007-03-05  Achraf cherti
	* new function getPrivateKeyPassword() (with i18n support), to replace
	  the generic function getPassword(question, save_password)
	* new in options dialog : specify the path of GPG, show the FireGPG official
	  website.
	* Shorter version of names : firegpgSelect -> Selection, 
	  Selection.isSelectionEditable -> isEditable, getSelection -> get,
	  setSelection -> set.
	* dcrypt -> decrypt / DCRYPT -> DECRYPT
	* new optional argument in getPrivateKeyPassword : savePassword.
	* FireGPG_GPG* -> GPG (because it's shorter and we have the already the namespace)
	* some orthography errors fixed in the french/english locales