@@ -53,6 +53,7 @@
       <preference id="gpg-path-pref" name="extensions.firegpg.gpg_path" type="string"/>
       <preference id="specify-gpg-path-pref" name="extensions.firegpg.specify_gpg_path" type="bool"/>
       <preference id="show-web-site-pref" name="extensions.firegpg.show_website" type="bool"/>
+      <preference id="result-always-in-new-window-pref" name="extensions.firegpg.result_always_in_new_window" type="bool"/>
     </preferences>
 
     <!-- gmail enabled ? -->
@@ -60,21 +61,27 @@
               label="&gmail-enabled-checkbox.label;" 
               accesskey="&gmail-enabled-checkbox.accesskey;"/>
 
-    <!-- show web site -->
-    <checkbox id="show-website-checkbox" preference="show-web-site-pref" checked="true" label="&show-website-checkbox;" />
+    <!-- Always sign or verify in a new window -->
+    <checkbox id="result-always-in-new-window" preference="result-always-in-new-window-pref"
+              label="&result-always-in-new-window;"/>
 
-    <!-- specify the gpg path -->
-    <checkbox id="change-gpg-path-checkbox" checked="true" preference="specify-gpg-path-pref"
-              label="&change-gpg-path-checkbox;" control="gpg-path-textbox"/>
-    <hbox>
-      <textbox id="gpg-path-textbox" flex="1" preference="gpg-path-pref"/>
-      <button id="change-gpg-path-button" label="&change-gpg-path-button;" 
-              control="gpg-path-textbox"/>
-    </hbox>
+    <!-- show web site -->
+    <checkbox id="show-website-checkbox" preference="show-web-site-pref" checked="true" label="&show-website-checkbox;"/>
 
     <!-- list of private keys -->
     <label id="private-keys-label" value="&private-keys-label.text;"/>
     <listbox id="private-keys-listbox" rows="4" onselect="privateKeySelected(this)"></listbox>
+
+    <!-- specify the gpg path -->
+    <checkbox id="change-gpg-path-checkbox" checked="true" preference="specify-gpg-path-pref"
+              label="&change-gpg-path-checkbox;" control="gpg-path-textbox"
+              oncommand="onChangeGPGPathCheckbox(this, true);"/>
+    <hbox>
+      <textbox flex="1" id="gpg-path-textbox" preference="gpg-path-pref"/>
+      <button id="change-gpg-path-button" label="&change-gpg-path-button;" 
+              control="gpg-path-textbox" oncommand="chooseGPGPath();"/>
+    </hbox>
+
   </prefpane>
 </prefwindow>
 
